# hopfield_is_all_you_need

./: .gitignore  README.md  compneuro.md  pyproject.toml
biological softmax/: softamx.ipynb
brain_health/: lagrange.py  lagrange_b.py
diffusion unet/: basic_diffusion.ipynb
neural_odes/: automatic_diff.ipynb  jax_torch.ipynb  nodes.ipynb
neural_odes/patient_neuralode/: nodes.py
neural_odes/patient_neuralode/notebooks/: vital.ipynb
neural_odes/patient_neuralode/scripts/: extract_data.py
optimization/: linear_regression.ipynb  sgd_class.ipynb
patient_similarity/notebooks/: experiment.ipynb  extract_data.py
pytorch_for_neuroscience/: pytroch_introduction.ipynb
scaling_laws/: scaling.py
