[project]
name = "hopfield-is-all-you-need"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "api>=0.0.7",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "optax>=0.2.6",
    "requests>=2.32.5",
    "statistics>=1.0.3.5",
    "torch>=2.7.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.22.1",
    "vitaldb>=1.5.8",
]
